--- a/.github/workflows/events.yaml
+++ b/.github/workflows/events.yaml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - "./github/workflows/*.yml"
+      - "./.github/workflows/*.yml"
   pull_request:
     branches:
       - main
     paths:
-      - "./github/workflows/*.yml"
+      - "./.github/workflows/*.yml"
 
 jobs:
   echo-event:
