--- a/.github/workflows/events.yaml
+++ b/.github/workflows/events.yaml
@@ -1,16 +1,17 @@
 name: Events n Filters
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - ".github/workflows/*.yml"
-  pull_request:
-    branches:
-      - main
-    paths:
-      - ".github/workflows/*.yml"
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - ".github/workflows/*.yml"
+  # pull_request:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - ".github/workflows/*.yml"
 
 jobs:
   echo-event:
