--- a/.github/workflows/env-n-secrets.yml
+++ b/.github/workflows/env-n-secrets.yml
@@ -33,6 +33,14 @@ jobs:
         run: |
           echo "leaked=${MY_SECRET}" >> "$GITHUB_OUTPUT"
 
+      - name: set env variable for next step
+        run: |
+          echo "TMP_FROM_ENV=$MYSECRET" >> "$GITHUB_ENV"
+
+      - name: read the env from previous step
+        run: |
+          echo "FROM ENV: $TMP_FROM_ENV"
+
       - name: use step output
         run: |
           echo "Output value: ${{ steps.expose.outputs.leaked }}"
