--- a/.github/workflows/env-n-secrets.yml
+++ b/.github/workflows/env-n-secrets.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: set env variable for next step
         run: |
-          echo "TMP_FROM_ENV=$MY_SECRET" >> "$GITHUB_ENV"
+          echo "TMP_FROM_ENV=${{ secrets.MY_SECRET }}" >> "$GITHUB_ENV"
 
       - name: read the env from previous step
         run: |
