added additional envs

--- a/.github/workflows/env-n-secrets.yml
+++ b/.github/workflows/env-n-secrets.yml
@@ -44,3 +44,24 @@ jobs:
       - name: use step output
         run: |
           echo "Output value: ${{ steps.expose.outputs.leaked }}"
+
+  super-secret-flow:
+    runs-on: ubuntu-latest
+    env:
+      LEVEL_KEY: "abc123"
+      HIDDEN_PATH: "/secret/location"
+    steps:
+      - name: show Envs
+        run: |
+          echo "Level key: $LEVEL_KEY"
+          echo "Path: $HIDDEN_PATH"
+
+      - name: override envs
+        run: |
+          echo "LEVEL_KEY=xyz789" >> "$GITHUB_ENV"
+          echo "HIDDEN_PATH=/home" >> "$GITHUB_ENV"
+
+      - name: show new envs
+        run: |
+          echo "Level key: $LEVEL_KEY"
+          echo "Path: $HIDDEN_PATH"
