--- a/.github/workflows/env-n-secrets2.yml
+++ b/.github/workflows/env-n-secrets2.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   producer:
     runs-on: ubuntu-latest
+    outputs:
+      janusz_sprawdzam_czy_rozumiem_zmienne: ${{ steps.expose.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}
+
     steps:
       - name: read secret and expose it
         id: expose
