--- a/.github/workflows/env-n-secrets2.yml
+++ b/.github/workflows/env-n-secrets2.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       janusz_sprawdzam_czy_rozumiem_zmienne: ${{ steps.expose.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}
-
+      meta: ${{ steps.expose.outputs.meta }}
     steps:
       - name: read secret and expose it
         id: expose
@@ -17,6 +17,7 @@ jobs:
           MY_SECRET: ${{ secrets.MY_SECRET }}
         run: |
           echo "janusz_sprawdzam_czy_rozumiem_zmienne=$MY_SECRET" >> "$GITHUB_OUTPUT"
+          echo "meta=env-ready" >> "$GITHUB_OUTPUT"
 
   consumer:
     needs: producer
@@ -25,3 +26,4 @@ jobs:
       - name: use job output
         run: |
           echo "Cross-job: ${{ needs.producer.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}"
+          echo "Meta: ${{ needs.producer.meta }}"
