--- a/.github/workflows/env-n-secrets2.yml
+++ b/.github/workflows/env-n-secrets2.yml
@@ -26,4 +26,4 @@ jobs:
       - name: use job output
         run: |
           echo "Cross-job: ${{ needs.producer.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}"
-          echo "Meta: ${{ needs.producer.meta }}"
+          echo "Meta: ${{ needs.producer.outputs.meta }}"
