--- a/.github/workflows/env-n-secrets2.yml
+++ b/.github/workflows/env-n-secrets2.yml
@@ -8,8 +8,8 @@ jobs:
   producer:
     runs-on: ubuntu-latest
     outputs:
-      janusz_sprawdzam_czy_rozumiem_zmienne: ${{ steps.expose.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}
       meta: ${{ steps.expose.outputs.meta }}
+      build_id: ${{ steps.for_build.outputs.build_id }}
     steps:
       - name: read secret and expose it
         id: expose
@@ -19,11 +19,23 @@ jobs:
           echo "janusz_sprawdzam_czy_rozumiem_zmienne=$MY_SECRET" >> "$GITHUB_OUTPUT"
           echo "meta=env-ready" >> "$GITHUB_OUTPUT"
 
+      - name: output with different id
+        id: for_build
+        run: |
+          echo "build_id=$(date +%s)" >> "$GITHUB_OUTPUT"
+
+      - name: show all outputs
+        run: |
+          cat "$GITHUB_OUTPUT"
+
   consumer:
     needs: producer
     runs-on: ubuntu-latest
+    env:
+      MY_SECRET: ${{ secrets.MY_SECRET}}
     steps:
       - name: use job output
         run: |
-          echo "Cross-job: ${{ needs.producer.outputs.janusz_sprawdzam_czy_rozumiem_zmienne }}"
+          echo "Secret direct: $MY_SECRET"
           echo "Meta: ${{ needs.producer.outputs.meta }}"
+          echo "Build id: ${{ needs.producer.outputs.build_id }}"
