--- a/.github/workflows/env-n-secrets3.yml
+++ b/.github/workflows/env-n-secrets3.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   npm-check:
     runs-on: ubuntu-latest
+    # env:
+    #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     permissions:
       contents: read
 
@@ -18,13 +20,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Create npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          umask 077
-          printf "//registry.npmjs.org/:_authToken=%s\n" "$NPM_TOKEN" > ~/.npmrc
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
 
       - name: Check session
         run: |
@@ -40,11 +37,6 @@ jobs:
           else
             echo "No package.json -> skipping dry-run"
           fi
-
-      - name: Cleanup npm
-        if: always()
-        run: |
-          shred -u ~/.npmrc || rm -f ~/.npmrc
 
       - name: Job completed
         run: |
