--- a/.github/workflows/env-n-secrets3.yml
+++ b/.github/workflows/env-n-secrets3.yml
@@ -7,8 +7,8 @@ on:
 jobs:
   npm-check:
     runs-on: ubuntu-latest
-    # env:
-    #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     permissions:
       contents: read
 
