--- a/.github/workflows/env-n-secrets3.yml
+++ b/.github/workflows/env-n-secrets3.yml
@@ -8,7 +8,7 @@ jobs:
   npm-check:
     runs-on: ubuntu-latest
     env:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     permissions:
       contents: read
 
